finish promo and add pros section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './blocks/header';
 @import './blocks/promo';
 @import './blocks/buttons';
+@import './blocks/pros';
 
 * {
   box-sizing: border-box;
@@ -12,4 +13,11 @@
 .container {
   max-width: 950px;
   margin: 0 auto;
+}
+
+.section-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  color: #0d0d0d;
 }
