--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,4 +8,10 @@
   color: #fff;
   background: $main-color;
   border-radius: 5px;
+  &-main {
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+    margin-top: 65px;
+  }
 }
