--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -3,4 +3,53 @@
   background: rgb(39, 176, 12) url('../img/hero-bg.jpg') center center / cover
     no-repeat;
   padding: 21px 0 90px;
+  color: #fff;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 42px;
+    text-transform: uppercase;
+  }
+  &__subtitle {
+    margin-top: 12px;
+    font-weight: 500;
+    font-size: 24px;
+    text-transform: uppercase;
+  }
+  &__icons {
+    margin-top: 60px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__icon {
+    width: 125px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+    img {
+      margin-bottom: 20px;
+      display: block;
+      margin: 0 auto;
+      width: 45px;
+      height: 45px;
+    }
+  }
+  &__link {
+    margin-top: 8px;
+    font-weight: 500;
+    font-size: 16px;
+    a {
+      color: inherit;
+      text-decoration: underline;
+    }
+  }
 }
