--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,10 +8,21 @@
   color: #fff;
   background: $main-color;
   border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s;
   &-main {
     width: 300px;
     height: 50px;
     font-size: 16px;
     margin-top: 65px;
+  }
+  &-submit {
+    width: 100%;
+    height: 58px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  &:hover {
+    opacity: 0.9;
   }
 }
