--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import './blocks/consultation';
 @import './blocks/section-title';
 @import './blocks/form-feed';
+@import './blocks/carousel';
 
 * {
   box-sizing: border-box;
