--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,22 +1,20 @@
 .carousel {
   padding: 85px 0;
-  &__inner {
-    max-width: 750px;
-    width: 90%;
-    margin: 0 auto;
-    position: relative;
 
-    img {
-      width: 100%;
-      object-fit: cover;
-    }
+  img {
+    width: 90%;
+    max-width: 750px;
+    display: block;
+    margin: 0 auto;
   }
-  .slick-prev,
-  .slick-next {
+
+  .prev,
+  .next {
+    padding: 5px;
+    width: 41px;
+    height: 60px;
     border: none;
     background-color: transparent;
-    width: 31px;
-    height: 50px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -27,40 +25,50 @@
       outline-offset: 5px;
     }
   }
-  .slick-prev {
-    left: -100px;
+
+  .prev {
+    left: -50px;
   }
-  .slick-next {
-    right: -100px;
+  .next {
+    right: -50px;
   }
-  .slick-dots {
+  .tns-nav {
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 1rem 0;
+    gap: 10px;
+  }
+  [data-nav] {
+    display: block;
+    width: 0.7rem;
+    height: 0.7rem;
+    padding: 0;
+    cursor: pointer;
 
-    list-style-type: none;
+    border: 1px solid grey;
+    border-radius: 100%;
+    background-color: transparent;
+  }
+  .tns-nav-active {
+    background-color: grey;
+  }
+}
 
-    li {
-      margin: 0 0.5rem;
+@media (max-width: 1100px) {
+  .carousel {
+    .prev {
+      left: 100px;
     }
-
-    button {
-      display: block;
-      width: 0.7rem;
-      height: 0.7rem;
-      padding: 0;
-      cursor: pointer;
-
-      border: none;
-      border-radius: 100%;
-      background-color: grey;
-
-      text-indent: -9999px;
+    .next {
+      right: 100px;
     }
-
-    li.slick-active button {
-      background-color: rgba(67, 61, 61, 0.997);
-    }
+  }
+}
+@media (max-width: 800px) {
+  .prev,
+  .next {
+    display: none;
   }
 }
