--- a/src/sass/blocks/_section-title.scss
+++ b/src/sass/blocks/_section-title.scss
@@ -3,6 +3,8 @@
   font-size: 30px;
   line-height: 30px;
   color: #0d0d0d;
+  text-align: center;
+  text-transform: uppercase;
   &-left {
     color: #fff;
     text-align-last: left;
