--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import './blocks/section-title';
 @import './blocks/form-feed';
 @import './blocks/carousel';
+@import './blocks/catalog';
 
 * {
   box-sizing: border-box;
