--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import './blocks/form-feed';
 @import './blocks/carousel';
 @import './blocks/catalog';
+@import './blocks/feedback';
 
 * {
   box-sizing: border-box;
