add feedback section

--- a/src/sass/blocks/_feedback.scss
+++ b/src/sass/blocks/_feedback.scss
@@ -1,3 +1,36 @@
 .feedback {
   padding-bottom: 48px;
+  &__container {
+    margin-top: 60px;
+  }
+  &-item {
+    &__avatar {
+      width: 169px;
+      height: 169px;
+      border-radius: 50%;
+    }
+    display: flex;
+    align-items: start;
+    gap: 60px;
+    padding-right: 30px;
+    &:not(:last-child) {
+      margin-bottom: 60px;
+    }
+    &__name {
+      font-weight: 700;
+      font-size: 18px;
+    }
+    &__achivments {
+      font-weight: 500;
+      font-size: 14px;
+      color: #646464;
+      margin-top: -5px;
+    }
+    &__text {
+      margin-top: 10px;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
 }
