--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,7 +9,7 @@
   background: $main-color;
   border-radius: 5px;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: all 0.3s;
   &-main {
     width: 300px;
     height: 50px;
@@ -23,7 +23,17 @@
     font-weight: 500;
   }
   &:hover {
-    opacity: 0.9;
+    // opacity: 0.9;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.9);
+    transform: translateY(-2px);
+  }
+  &:active {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(0);
+  }
+  &:focus {
+    outline-offset: 3px;
+    outline-color: $main-color;
   }
   &-catalog {
     width: 135px;
