--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './blocks/carousel';
 @import './blocks/catalog';
 @import './blocks/feedback';
+@import './blocks/footer';
 
 * {
   box-sizing: border-box;
