--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,10 +11,15 @@
 @import './blocks/catalog';
 @import './blocks/feedback';
 @import './blocks/footer';
+@import './blocks/modal';
 
 * {
   box-sizing: border-box;
   font-family: 'MuseoSansCyrl', sans-serif;
+}
+
+body {
+  position: relative;
 }
 
 .container {
