--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -42,6 +42,7 @@
     margin-top: 66px;
     display: flex;
     align-items: center;
+    justify-content: center;
     display: none;
     flex-wrap: wrap;
     gap: 20px;
