--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import './blocks/feedback';
 @import './blocks/footer';
 @import './blocks/modal';
+@import './blocks/media';
 
 * {
   box-sizing: border-box;
@@ -23,6 +24,7 @@ body {
 }
 
 .container {
+  width: 90%;
   max-width: 950px;
   margin: 0 auto;
   position: relative;
