--- a/src/sass/blocks/_form-feed.scss
+++ b/src/sass/blocks/_form-feed.scss
@@ -18,4 +18,16 @@
       outline-color: $main-color;
     }
   }
+  .form-error {
+    border: 1px solid red;
+  }
+  input.form-error {
+    margin-bottom: 0;
+  }
+  label.form-error {
+    border: none;
+    text-align: left;
+    margin-bottom: 15px;
+    color: $main-color;
+  }
 }
