--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import './base/mixins';
 @import './base/variables';
+@import './base/animation';
 @import './blocks/header';
 @import './blocks/promo';
 @import './blocks/buttons';
