--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -132,6 +132,12 @@
         transform: translateX(calc(-100% - 20px));
       }
 
+      ul {
+        list-style: none;
+        padding-left: 0;
+        margin-bottom: 0;
+      }
+
       li {
         position: relative;
         font-weight: 300;
