--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -54,9 +54,8 @@
     &:not(:last-child) {
       margin-right: 27px;
     }
-    i {
-      font-size: 25px;
-      color: #fff;
+    img {
+      height: 25px;
     }
   }
 }
