--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
   font-family: 'Museo Sans';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl-100.eot');
   src: url('../fonts/MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl-100.woff') format('woff'),
@@ -10,6 +11,7 @@
 
 @font-face {
   font-family: 'Museo Sans';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl-300.eot');
   src: url('../fonts/MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl-300.woff') format('woff'),
@@ -20,6 +22,7 @@
 
 @font-face {
   font-family: 'MuseoSansCyrl';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl300.eot');
   src: url('../fonts/MuseoSansCyrl300.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl300.woff') format('woff'),
@@ -30,6 +33,7 @@
 
 @font-face {
   font-family: 'MuseoSansCyrl';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl500.eot');
   src: url('../fonts/MuseoSansCyrl500.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl500.woff') format('woff'),
@@ -40,6 +44,7 @@
 
 @font-face {
   font-family: 'MuseoSansCyrl';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl700.eot');
   src: url('../fonts/MuseoSansCyrl700.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl700.woff') format('woff'),
@@ -49,6 +54,7 @@
 }
 @font-face {
   font-family: 'MuseoSansCyrl';
+  font-display: swap;
   src: url('../fonts/MuseoSansCyrl900.eot');
   src: url('../fonts/MuseoSansCyrl900.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl900.woff') format('woff'),
